изменение, удаление, закупка продуктов + маленькие фиксы

--- a/templates/includes/menus/menu_tile.html
+++ b/templates/includes/menus/menu_tile.html
@@ -20,6 +20,7 @@
         <ul class="menu__info">
             <li>{{ menu.price }}₽</li>
             <li>Блюд: {{ menu.dishes|length }}</li>
+            <li>Выдано: {{ menu.get_amount }}</li>
         </ul>
 
     </a>
