--- a/static/styles/products/list.css
+++ b/static/styles/products/list.css
@@ -1,6 +1,6 @@
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     grid-auto-rows: 124px;
     row-gap: 0.5rem;
     column-gap: 0.5rem;
@@ -18,12 +18,17 @@
     box-shadow: var(--shadow);
     overflow: hidden;
     transition: border 0.1s ease-in-out;
-
+    padding: 2px;
 }
 
 .product__name {
     font-size: 1.75rem;
     font-weight: 600;   
+}
+
+.product-title {
+    display: flex;
+    justify-content: space-between;
 }
 
 .product__composition {
@@ -33,4 +38,19 @@
 
 .product__composition li {
     color: var(--text-muted)
+}
+
+.edit-btn {
+    font-size: 0.8rem;
+    width: 50%;
+}
+
+.del-btn {
+    font-size: 0.8rem;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items:normal;
 }
