--- a/templates/includes/profile_popup.html
+++ b/templates/includes/profile_popup.html
@@ -5,7 +5,7 @@
                 <a href='/profile'>Профиль</a>
             </li>
 
-            {% if current_user.roles[0].name == 'user' %}
+            {% if current_user.roles[0].name != 'admin' %}
             <li>
                 <a href='/reviews'>Отзывы</a>
             </li>
