--- a/templates/notifications/notifications.html
+++ b/templates/notifications/notifications.html
@@ -20,6 +20,6 @@
             {% endfor %}
         </div>
     {% else %}
-        <p class="no-notification-message"><strong>Нет уведомлений.</strong></p>
+        <p class="no-requisition-message"><strong>Нет уведомлений.</strong></p>
     {% endif %}
 {% endblock %}
