--- a/templates/statistics/statistics.html
+++ b/templates/statistics/statistics.html
@@ -21,12 +21,12 @@
             <div class="statistics-grid">
                 <a href="/admin/statistic/payments" class="statistics-card" style="text-decoration: none; color: inherit;">
                     <h2 class="stats-label">Статистика оплат</h2>
-                    <p>Просмотр доходов и способов оплаты</p>
+                    <p class="stats-content">Просмотр доходов и способов оплаты</p>
                 </a>
 
                 <a href="/admin/statistic/attendance" class="statistics-card" style="text-decoration: none; color: inherit;">
                     <h2 class="stats-label">Статистика посещаемости</h2>
-                    <p>Анализ покупок по классам</p>
+                    <p class="stats-content">Анализ покупок по классам</p>
                 </a>
             </div>
         </section>
