--- a/templates/users/list.html
+++ b/templates/users/list.html
@@ -26,7 +26,7 @@
         </div>
     {% else %}
         <div class="no-users-message">
-            <p><strong>Других пользователей нет</strong></p>
+            <p><strong>Пользователей нет</strong></p>
         </div>
     {% endif %}
 {% endblock %}
