--- a/static/styles/menus/menu.css
+++ b/static/styles/menus/menu.css
@@ -58,10 +58,14 @@ main {
 }
 
 .no-menu-message {
+    margin: 0;
     width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 1.5rem;
-    text-align: center;
-    align-self: center;
+    color: var(--text-muted);
 }
 
 .menu-grid {
@@ -191,6 +195,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
     font-size: 1.5rem;
     color: var(--text-muted);
 }
