--- a/templates/includes/menus/menu_tile.html
+++ b/templates/includes/menus/menu_tile.html
@@ -1,5 +1,5 @@
 <div class="menu">
-    <a href="menus/{{ menu.id }}" class="menu__link">
+    <a class="menu__link">
 
         <div class="menu__top">
             <h2 class="menu__header">{{ menu.date | date_Y_M_d }} | 
