--- a/static/styles/includes/dishes/dish_tile.css
+++ b/static/styles/includes/dishes/dish_tile.css
@@ -15,6 +15,8 @@
 
 .dish__link {
     display: block;
+    width: 100%;
+    height: 100%;
     padding: 8px 12px;
     color: var(--text);
     text-decoration: none;
