--- a/templates/includes/menus/menu_tile.html
+++ b/templates/includes/menus/menu_tile.html
@@ -13,7 +13,7 @@
             </h2>
             
             {% if current_user.role == 'cook' %}
-            <button class="menu__delete-btn danger"><img style="height: 1.25em;" src='/static/images/buttons/delete_button.svg'></button>
+            <button class="delete-btn-small danger"><img style="height: 1.25em;" src='/static/images/buttons/delete_button.svg'></button>
             {% endif %}
         </div>
 
