--- a/static/styles/layouts/base.css
+++ b/static/styles/layouts/base.css
@@ -186,3 +186,11 @@ a {
 li::marker {
     color: var(--primary)
 }
+
+
+.delete-btn-small {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    padding: 6px 6px;
+}
