--- a/templates/dishes/dish.html
+++ b/templates/dishes/dish.html
@@ -43,19 +43,18 @@
         </section>
     {% if role == 'user' %}
         <section class="info__section">
-            <form action="/reviews/add" id="newReviewForm" method="post" style="display: none;"></form>
             <div class="section__top">
                 <h2 class="section__header">Ваш отзыв</h2>
                 {% if not review %}
-                    <input type="hidden" value="{{ dish.id }}" style="display: none;">
                     <button class="accent" form="newReviewForm">Сохранить</button>
                 {% endif %}
             </div>
-
+            
             {% if not review %}
-                <div class="dish__new-review">
-                    <textarea class="new-review__textarea" name="" placeholder="Новый отзыв"></textarea>
-                </div>  
+                <form class="dish__new-review" action="/reviews/add" id="newReviewForm" method="post">
+                    <input type="hidden" name="dish_id" value="{{ dish.id }}">
+                    <textarea class="new-review__textarea" name="content" placeholder="Новый отзыв"></textarea>
+                </form>
             {% else %}
                 <div class="dish__review">
                     <p class="review">{{ review.content }}</p>
