--- a/templates/menus/menu.html
+++ b/templates/menus/menu.html
@@ -42,7 +42,7 @@
         </div>
 
         {% if current_user.roles[0].name == 'user' and menu %}
-            <form class="buy-form" method="POST" action="/menu/{{ selected_date }}?type={{ menu.type }}" style="display: none;">
+            <form class="buy-form" method="POST" action="/menu/{{ selected_date }}?type={{ menu.type }}">
                 <input type="hidden" name="menu_id" value="{{ menu.id }}">
                 <button class="buy-menu-btn accent" type="submit">Купить</button>
             </form>
