--- a/static/styles/dishes/dish.css
+++ b/static/styles/dishes/dish.css
@@ -55,8 +55,31 @@
 }
 
 
+.dish__reviews {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 24px;
+}
+
+
+.dish__review {
+    padding: 8px;
+    border-radius: var(--border-radius);
+    background: var(--bg-light);
+    box-shadow: var(--shadow);
+}
+
+
+.review-date {
+    margin: 0;
+    font-weight: 600;
+}
+
+
 .review {
     margin: 0;
+    color: var(--text-muted);
     font-size: 1.2rem;
 }
 
