--- a/static/styles/includes/dishes/dish_tile.css
+++ b/static/styles/includes/dishes/dish_tile.css
@@ -24,7 +24,7 @@
 }
 
 .dish__name {
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     font-weight: 600;
 }
 
@@ -41,5 +41,6 @@
 }
 
 .dish__composition li {
-    color: var(--text-muted)
+    color: var(--text-muted);
+    font-size: 1.1rem;
 }
