--- a/static/styles/reviews/list.css
+++ b/static/styles/reviews/list.css
@@ -36,7 +36,13 @@
 
 .review__dish {
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 4px;
+    font-weight: 600;
+}
+
+
+.review-date {
+    color: var(--primary)
 }
 
 
