--- a/templates/dishes/dish.html
+++ b/templates/dishes/dish.html
@@ -44,7 +44,7 @@
     {% if role == 'user' %}
         <section class="info__section">
             <div class="section__top">
-                <h2 class="section__header">Ваш отзыв</h2>
+                <h2 class="section__header">Ваши отзывы</h2>
                 {% if not review %}
                     <button class="accent" form="newReviewForm">Сохранить</button>
                 {% endif %}
@@ -55,12 +55,15 @@
                 <textarea class="new-review__textarea" name="content" placeholder="Новый отзыв"></textarea>
             </form>
             
-            {% for review in reviews %}
-                <div class="dish__review">
-                    <p class="review">{{ review.content }}</p>
-                </div>
-            {% endfor %}
-
+            <div class="dish__reviews">
+                {% for review in reviews %}
+                    <div class="dish__review">
+                        <h3 class="review-date">{{ review.date | date_Y_M_d }}</h3>
+                        <p class="review">{{ review.content }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+                
         </section>
     {% elif role == 'cook' %}
         <section class="info__section">
